Fix code wrapping on homepage

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,5 +58,5 @@ code {
 	border-radius: 0.25rem;
 	padding: 1rem;
 	display: inline-block;
-	font-size: 1rem;
+	overflow-wrap: anywhere;
 }
